# PDF-to-LaTeX-1to1-Pipeline

./: .clinerules  .cursorrules  .gitignore  LICENSE  PROMPT_TEMPLATE.txt  PROTOCOL_1to1.md  README.md  pyproject.toml  requirements.txt
.agents/skills/pdf-to-latex-1to1/: SKILL.md
figures/: .gitkeep
pdfs/: .gitkeep
scripts/: compile_and_check.py  extract_pdf_content.py  final_audit.py  package_overleaf.py  prepare_batches.py  qa_verify_fidelity.py
templates/: main.tex  preamble.tex  subfile_chapter.tex
tex/: .gitkeep
