[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-to-latex-1to1"
version = "1.0.0"
description = "The Gold Standard for automated conversion of academic lecture notes, textbooks, and technical manuscripts from PDF to pure vector LaTeX with exact 1:1 fidelity."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "PDF-to-LaTeX 1:1 Pipeline Contributors" }
]
keywords = ["latex", "pdf", "typesetting", "1to1-fidelity", "pymupdf", "ai-agents", "antigravity"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/PDF-to-LaTeX-1to1-Pipeline"
Documentation = "https://github.com/PDF-to-LaTeX-1to1-Pipeline#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
